# projetValCmake

./: ReadMe.txt  projetValCmake.wsp
projetValCmake/: CMakeLists.txt  projet.cpp
